--- a/spec/fixtures/vcr_cassettes/shows_distance_to_other_profiles.yml
+++ b/spec/fixtures/vcr_cassettes/shows_distance_to_other_profiles.yml
@@ -1,44 +1,8 @@
 ---
 http_interactions:
 - request:
-    method: post
-    uri: http://localhost:3001/api/v1/profiles?profile_picture=name&user_id=164&username&zipcode=80210
-    body:
-      encoding: UTF-8
-      string: ''
-    headers:
-      User-Agent:
-      - Faraday v1.4.1
-      Content-Length:
-      - '0'
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 201
-      message: Created
-    headers:
-      Content-Type:
-      - application/json; charset=utf-8
-      Etag:
-      - W/"8f7fc60752a9e15e49c51adc89963144"
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - b61d73df-de69-4d87-94bb-004de1b16b58
-      X-Runtime:
-      - '0.009113'
-      Transfer-Encoding:
-      - chunked
-    body:
-      encoding: UTF-8
-      string: '{"data":"profile created successfully"}'
-  recorded_at: Tue, 20 Apr 2021 15:08:12 GMT
-- request:
     method: get
-    uri: http://localhost:3001/api/v1/distance?current_user=164&user=164
+    uri: http://localhost:3001/api/v1/distance?current_user=6&user=6
     body:
       encoding: US-ASCII
       string: ''
@@ -61,18 +25,52 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 2985a49d-2002-4568-b9a1-b4b30a1330f5
+      - f745e93b-d728-49d1-98f1-218a996b02e7
       X-Runtime:
-      - '0.629770'
+      - '0.625194'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":0}'
-  recorded_at: Tue, 20 Apr 2021 15:08:13 GMT
+  recorded_at: Tue, 20 Apr 2021 20:15:40 GMT
 - request:
     method: get
-    uri: http://localhost:3001/api/v1/profile/164/tags
+    uri: http://localhost:3001/api/v1/profile/6/tags
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v1.4.1
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Content-Type:
+      - application/json; charset=utf-8
+      Etag:
+      - W/"9f071ec892f32c456b51d165146b2735"
+      Cache-Control:
+      - max-age=0, private, must-revalidate
+      X-Request-Id:
+      - fb568cb9-32e8-4360-829e-5c4986d4565f
+      X-Runtime:
+      - '0.006455'
+      Transfer-Encoding:
+      - chunked
+    body:
+      encoding: UTF-8
+      string: '{"data":[{"id":"1","type":"tag","attributes":{"name":"Painter"}}]}'
+  recorded_at: Tue, 20 Apr 2021 20:15:40 GMT
+- request:
+    method: get
+    uri: http://localhost:3001/api/v1/profiles/6/post
     body:
       encoding: US-ASCII
       string: ''
@@ -95,18 +93,18 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 21ae77e8-7253-4478-9c67-ac5ba50039f9
+      - 39f15f25-43ab-4cbe-a27a-56bf9a448d4c
       X-Runtime:
-      - '0.004421'
+      - '0.004610'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":[]}'
-  recorded_at: Tue, 20 Apr 2021 15:08:13 GMT
+  recorded_at: Tue, 20 Apr 2021 20:15:40 GMT
 - request:
     method: get
-    uri: http://localhost:3001/api/v1/profiles/164/post
+    uri: http://localhost:3001/api/v1/profiles/6/galleries
     body:
       encoding: US-ASCII
       string: ''
@@ -129,18 +127,18 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 5bd510e9-8bb0-4c7d-b1a2-784e9763e5f8
+      - ed774434-e96c-4be8-868d-a62c6eff6e6b
       X-Runtime:
-      - '0.003968'
+      - '0.004978'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":[]}'
-  recorded_at: Tue, 20 Apr 2021 15:08:13 GMT
+  recorded_at: Tue, 20 Apr 2021 20:15:40 GMT
 - request:
     method: get
-    uri: http://localhost:3001/api/v1/profiles/164/galleries
+    uri: http://localhost:3001/api/v1/profiles/6
     body:
       encoding: US-ASCII
       string: ''
@@ -159,22 +157,23 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Etag:
-      - W/"8fe32e407a1038ee38753b70e5374b3a"
+      - W/"2c099a34eb577120aea092df60b3df2e"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 95a82dbb-d54f-429c-a42a-450e5d12ec49
+      - ef2a912a-7b13-4c2c-a03f-fdad2e66c4a6
       X-Runtime:
-      - '0.004967'
+      - '0.003275'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
-      string: '{"data":[]}'
-  recorded_at: Tue, 20 Apr 2021 15:08:13 GMT
+      string: '{"data":{"id":"86","type":"profile","attributes":{"zipcode":"80228","user_id":6,"profile_picture":"http://www.google.com","username":"former
+        salesman"}}}'
+  recorded_at: Tue, 20 Apr 2021 20:15:40 GMT
 - request:
     method: get
-    uri: http://localhost:3001/api/v1/profiles/164
+    uri: http://localhost:3001/api/v1/profiles/6
     body:
       encoding: US-ASCII
       string: ''
@@ -193,22 +192,23 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Etag:
-      - W/"c1c6e96ecc4c3cdbbb778f6fdaeed400"
+      - W/"2c099a34eb577120aea092df60b3df2e"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - dd32bf56-92bd-455b-978f-ba44d2055100
+      - 177d6b2a-fe78-486a-88a6-2deac9f62a10
       X-Runtime:
-      - '0.003542'
+      - '0.003252'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
-      string: '{"data":{"id":"71","type":"profile","attributes":{"zipcode":"80210","user_id":164,"profile_picture":null,"username":null}}}'
-  recorded_at: Tue, 20 Apr 2021 15:08:13 GMT
+      string: '{"data":{"id":"86","type":"profile","attributes":{"zipcode":"80228","user_id":6,"profile_picture":"http://www.google.com","username":"former
+        salesman"}}}'
+  recorded_at: Tue, 20 Apr 2021 20:15:40 GMT
 - request:
     method: get
-    uri: http://localhost:3001/api/v1/profiles/164
+    uri: http://localhost:3001/api/v1/distance?current_user=6&user=2
     body:
       encoding: US-ASCII
       string: ''
@@ -227,53 +227,19 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Etag:
-      - W/"c1c6e96ecc4c3cdbbb778f6fdaeed400"
+      - W/"53461ea4735becdb4bd9b0b56a2a1768"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 8ccb61b0-58b4-4f86-8943-aedfd50d9515
+      - 40bb8b88-c1cf-49a5-9dc6-4b6ecf1e62a3
       X-Runtime:
-      - '0.003173'
+      - '0.619501'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
-      string: '{"data":{"id":"71","type":"profile","attributes":{"zipcode":"80210","user_id":164,"profile_picture":null,"username":null}}}'
-  recorded_at: Tue, 20 Apr 2021 15:08:13 GMT
-- request:
-    method: get
-    uri: http://localhost:3001/api/v1/distance?current_user=1&user=2
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      User-Agent:
-      - Faraday v1.4.1
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Content-Type:
-      - application/json; charset=utf-8
-      Etag:
-      - W/"80bfe6560f8d0c791611233fdbb16307"
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - b48b6a77-5750-4645-a604-fa531eeef728
-      X-Runtime:
-      - '0.611499'
-      Transfer-Encoding:
-      - chunked
-    body:
-      encoding: UTF-8
-      string: '{"data":5.19}'
-  recorded_at: Tue, 20 Apr 2021 15:08:14 GMT
+      string: '{"data":20.82}'
+  recorded_at: Tue, 20 Apr 2021 20:15:40 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profile/2/tags
@@ -299,15 +265,15 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - f65792d7-b21a-4199-a7e6-fe9d9807caa0
+      - 62924ec3-1e2c-4452-a069-7b30ecf9334d
       X-Runtime:
-      - '0.005663'
+      - '0.005122'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":[{"id":"4","type":"tag","attributes":{"name":"Photographer"}},{"id":"5","type":"tag","attributes":{"name":"Drummer"}}]}'
-  recorded_at: Tue, 20 Apr 2021 15:08:14 GMT
+  recorded_at: Tue, 20 Apr 2021 20:15:40 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profiles/2/post
@@ -333,9 +299,9 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 80a3b94d-5cc9-4538-a3d7-db8df35cc09d
+      - a342cbaa-7f48-4e3e-a756-423bee9b39df
       X-Runtime:
-      - '0.003830'
+      - '0.004263'
       Transfer-Encoding:
       - chunked
     body:
@@ -343,7 +309,7 @@ http_interactions:
       string: '{"data":[{"id":"4","type":"post","attributes":{"content":"hey did you
         see that headline?","link":"photoURL.com","user_id":2,"created_at":"2021-04-19T21:22:47.075Z"}},{"id":"5","type":"post","attributes":{"content":"hey
         checkout my create shoes?","link":"photoURL.com","user_id":2,"created_at":"2021-04-19T21:22:47.077Z"}}]}'
-  recorded_at: Tue, 20 Apr 2021 15:08:14 GMT
+  recorded_at: Tue, 20 Apr 2021 20:15:40 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profiles/2/galleries
@@ -369,9 +335,9 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - f70ae4a8-4eb6-45f7-a33e-f73833d3fd37
+      - 3abf0b77-2cb1-40d5-94eb-fa143de469f8
       X-Runtime:
-      - '0.003761'
+      - '0.003407'
       Transfer-Encoding:
       - chunked
     body:
@@ -379,7 +345,7 @@ http_interactions:
       string: '{"data":[{"id":"2","type":"gallery","attributes":{"user_id":2,"name":"sweet
         tatoos","created_at":"2021-04-19T21:22:47.096Z","updated_at":"2021-04-19T21:22:47.096Z","photo_url":"http://www.google.com"}},{"id":"6","type":"gallery","attributes":{"user_id":2,"name":"set
         from the theatre","created_at":"2021-04-19T21:22:47.102Z","updated_at":"2021-04-19T21:22:47.102Z","photo_url":"http://www.google.com"}}]}'
-  recorded_at: Tue, 20 Apr 2021 15:08:14 GMT
+  recorded_at: Tue, 20 Apr 2021 20:15:40 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profiles/2/galleries/2/photos
@@ -405,9 +371,9 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - e3a31d01-12df-4bae-91d9-1411a4199c7d
+      - 5aad9a25-c9c3-4b01-b447-e3fdbd72e464
       X-Runtime:
-      - '0.004220'
+      - '0.004492'
       Transfer-Encoding:
       - chunked
     body:
@@ -415,7 +381,7 @@ http_interactions:
       string: '{"data":[{"id":"4","type":"photo","attributes":{"description":"pic
         1","url":"http:www.google.com","created_at":"2021-04-19T21:22:47.127Z","updated_at":"2021-04-19T21:22:47.127Z","gallery_id":2}},{"id":"5","type":"photo","attributes":{"description":"pic
         1","url":"http:www.google.com","created_at":"2021-04-19T21:22:47.130Z","updated_at":"2021-04-19T21:22:47.130Z","gallery_id":2}}]}'
-  recorded_at: Tue, 20 Apr 2021 15:08:14 GMT
+  recorded_at: Tue, 20 Apr 2021 20:15:40 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profiles/2/galleries/6/photos
@@ -441,9 +407,9 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 62a1893e-bc33-46fe-a612-ed46195f4a93
+      - 3fd66822-4c51-40c3-a898-80d8f83089d2
       X-Runtime:
-      - '0.004524'
+      - '0.004244'
       Transfer-Encoding:
       - chunked
     body:
@@ -452,7 +418,7 @@ http_interactions:
         1","url":"http:www.google.com","created_at":"2021-04-19T21:22:47.149Z","updated_at":"2021-04-19T21:22:47.149Z","gallery_id":6}},{"id":"14","type":"photo","attributes":{"description":"pic
         1","url":"http:www.google.com","created_at":"2021-04-19T21:22:47.151Z","updated_at":"2021-04-19T21:22:47.151Z","gallery_id":6}},{"id":"15","type":"photo","attributes":{"description":"pic
         1","url":"http:www.google.com","created_at":"2021-04-19T21:22:47.153Z","updated_at":"2021-04-19T21:22:47.153Z","gallery_id":6}}]}'
-  recorded_at: Tue, 20 Apr 2021 15:08:14 GMT
+  recorded_at: Tue, 20 Apr 2021 20:15:40 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profiles/2
@@ -478,15 +444,15 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 1046494b-fbac-492c-a6d2-39695f2f8b18
+      - b5e4a80c-f8e1-417a-8fcf-447253cae658
       X-Runtime:
-      - '0.002890'
+      - '0.002734'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":{"id":"2","type":"profile","attributes":{"zipcode":"80305","user_id":2,"profile_picture":"http://www.google.com","username":"korn"}}}'
-  recorded_at: Tue, 20 Apr 2021 15:08:14 GMT
+  recorded_at: Tue, 20 Apr 2021 20:15:40 GMT
 - request:
     method: get
     uri: http://localhost:3001/api/v1/profiles/2
@@ -512,13 +478,13 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - e5de86b5-4987-45c6-b758-8ce239562966
+      - 73847450-9c58-4ec8-a59e-2d37833269b5
       X-Runtime:
-      - '0.002677'
+      - '0.002442'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
       string: '{"data":{"id":"2","type":"profile","attributes":{"zipcode":"80305","user_id":2,"profile_picture":"http://www.google.com","username":"korn"}}}'
-  recorded_at: Tue, 20 Apr 2021 15:08:14 GMT
+  recorded_at: Tue, 20 Apr 2021 20:15:40 GMT
 recorded_with: VCR 6.0.0
