--- a/spec/fixtures/vcr_cassettes/BackendService/Class_Methods/_get_user_galleries.yml
+++ b/spec/fixtures/vcr_cassettes/BackendService/Class_Methods/_get_user_galleries.yml
@@ -21,18 +21,18 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Etag:
-      - W/"e541dcb1dfea46045755e5dc23fe5db5"
+      - W/"9fdfff7f15f2b4cc8ec1a29402887035"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - e0374160-012f-471e-a7e0-60c5cef2f765
+      - fdaa1ea9-c15e-44e6-8ff6-a9011cd8b5de
       X-Runtime:
-      - '0.013712'
+      - '0.023917'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
-      string: '{"data":[{"id":"1","type":"gallery","attributes":{"user_id":1,"photo_url":"http://www.google.com","name":"photos
-        from cali","created_at":"2021-04-18T16:28:20.884Z","updated_at":"2021-04-18T16:28:20.884Z","photo_count":3}}]}'
-  recorded_at: Mon, 19 Apr 2021 21:05:27 GMT
+      string: '{"data":[{"id":"1","type":"gallery","attributes":{"user_id":1,"name":"photos
+        from cali","created_at":"2021-04-20T15:51:40.915Z","updated_at":"2021-04-20T15:51:40.915Z","photo_url":"http://www.google.com"}}]}'
+  recorded_at: Tue, 20 Apr 2021 22:46:00 GMT
 recorded_with: VCR 6.0.0
