--- a/spec/fixtures/vcr_cassettes/BackendService/Class_Methods/_get_user_galleries.yml
+++ b/spec/fixtures/vcr_cassettes/BackendService/Class_Methods/_get_user_galleries.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3001/api/v1/profiles/1/galleries
+    uri: http://localhost:3001/api/v1/profiles/7/galleries
     body:
       encoding: US-ASCII
       string: ''
@@ -21,18 +21,17 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Etag:
-      - W/"9fdfff7f15f2b4cc8ec1a29402887035"
+      - W/"5f3228fb52f3310223f6994187faa2e2"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - fdaa1ea9-c15e-44e6-8ff6-a9011cd8b5de
+      - a51136e9-fd12-42c4-8807-692a7a9a8d7e
       X-Runtime:
-      - '0.023917'
+      - '0.016021'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
-      string: '{"data":[{"id":"1","type":"gallery","attributes":{"user_id":1,"name":"photos
-        from cali","created_at":"2021-04-20T15:51:40.915Z","updated_at":"2021-04-20T15:51:40.915Z","photo_url":"http://www.google.com"}}]}'
-  recorded_at: Tue, 20 Apr 2021 22:46:00 GMT
+      string: '{"data":[{"id":"10","type":"gallery","attributes":{"user_id":7,"name":"profile","created_at":"2021-04-21T01:21:56.834Z","updated_at":"2021-04-21T01:21:56.834Z","photo_url":null}}]}'
+  recorded_at: Wed, 21 Apr 2021 01:23:12 GMT
 recorded_with: VCR 6.0.0
